# android-embed-python

./: .gitmodules  README.md  build-deps  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/app/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/example/epython/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: pythonthread.cpp  pythonthread.h
app/src/main/cpp/Modules/: monkeypatch.cpp
app/src/main/java/com/example/app/: MainActivity.kt
app/src/main/java/com/example/epython/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/epython/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
python/: build.gradle
python/src/androidTest/java/com/example/python/: ExampleInstrumentedTest.kt
python/src/main/: AndroidManifest.xml
python/src/main/cpp/: CMakeLists.txt  jni.cpp
python/src/main/java/com/example/python/: NativeLib.kt
scripts/: build-deps  create-py-zip-module  create-site-packages-assets
scripts/bzip2/: CMakeLists.txt
scripts/python3/: setup.py.patch
